--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss": "^8",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-3d": "^1.0.6",
     "typescript": "^5"
   }
 }
