--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -18,12 +19,14 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "lucide-react": "^0.419.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
+    "object-hash": "^3.0.0",
     "react": "^18",
     "react-cookie": "^7.2.0",
     "react-dom": "^18",
@@ -37,6 +40,7 @@
     "@commitlint/config-conventional": "19.2.2",
     "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20",
+    "@types/object-hash": "^3.0.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
