--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@vercel/analytics": "^1.3.1",
     "accept-language": "^3.0.18",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
